[package]
name = "moldy-mango"
version = "0.1.0"
authors = ["Jakub Sadowski <git@vcc.earth>"]
edition = "2018"

[dependencies]
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = {version = "0.8"}